--- a/pom.xml
+++ b/pom.xml
@@ -22,9 +22,15 @@
 
         <spring-boot.version>2.1.3.RELEASE</spring-boot.version>
     </properties>
+    <!--scm信息-->
+    <scm>
+        <url>http://andiycc.com</url>
+        <connection>scm:git:https://github.com/Tomones/sms-aliyun-parent.git</connection>
+        <developerConnection>scm:git:https://github.com/Tomones/sms-aliyun-parent.git</developerConnection>
+    </scm>
     <developers>
         <developer>
-            <name>cn-src</name>
+            <name>guotao</name>
             <email>guotao@idsmanager.com</email>
         </developer>
     </developers>
