--- a/sms-aliyun-spring-boot-starter/pom.xml
+++ b/sms-aliyun-spring-boot-starter/pom.xml
@@ -42,4 +42,16 @@
             <version>1.18.6</version>
         </dependency>
     </dependencies>
+    <!--scm信息-->
+    <scm>
+        <url>http://andiycc.com</url>
+        <connection>scm:git:https://github.com/Tomones/sms-aliyun-parent.git</connection>
+        <developerConnection>scm:git:https://github.com/Tomones/sms-aliyun-parent.git</developerConnection>
+    </scm>
+    <developers>
+        <developer>
+            <name>guotao</name>
+            <email>guotao@idsmanager.com</email>
+        </developer>
+    </developers>
 </project>
